# irvine-connect-realtime-gtfs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: server.rs
src/gtfs/: loader.rs  types.rs
src/matcher/: algorithm.rs  history.rs  mod.rs  proximity.rs  updates.rs  viterbi.rs
src/realtime/: fetcher.rs
visualizer/: index.html  package-lock.json  package.json
visualizer/src/: App.svelte
