[package]
name = "irvine-connect-realtime-gtfs"
version = "0.1.0"
edition = "2024"

[dependencies]
gtfs-realtime = "0.2.0"
gtfs-structures = "0.47.0"
reqwest = { version = "0.13.1", features = ["stream"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8"
prost = "0.14"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
zip = "2.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
